--- a/serverless.yml
+++ b/serverless.yml
@@ -6,18 +6,46 @@ frameworkVersion: '2'
 
 custom:
   env_var:
-    s3_bucket: myservice-gabi235087594-mybucket
+    s3_bucket: BUCKET_NAME
+    ddb_table_name: TABLE_NAME
+    region: us-east-1
+    arn: ARN
 
 provider:
   name: aws
   runtime: nodejs12.x
   lambdaHashingVersion: '20201221'
-  region: 'us-east-1'
+  region: us-east-1
   stage: 'dev'
+  iam:
+    role:
+      statements:
+        - Effect: 'Allow'
+          Action:
+            - 's3:PutObject'
+            - 's3:GetObject'
+            - 'dynamodb:PutItem'
+          Resource:
+            Fn::Join:
+              - ''
+              - - 'arn:aws:s3:::'
+                - ${self:custom.env_var.s3_bucket}
+                - '/*'
+        - Effect: 'Allow'
+          Action:
+            - 'dynamodb:PutItem'
+          Resource:
+            Fn::Join:
+              - ''
+              - - 'arn:aws:dynamodb:'
+                - ${self:custom.env_var.region}
+                - ':${self:custom.env_var.arn}:'
+                - 'table/'
+                - ${self:custom.env_var.ddb_table_name}
 
 functions:
   api:
-    handler: handler.handler
+    handler: api/handler.handler
     events:
       - http:
           path: /
@@ -25,7 +53,13 @@ functions:
       - http:
           path: /{proxy+}
           method: ANY
-    role: apiRole
+  trigger:
+    handler: trigger/handler.handler
+    events:
+      - s3:
+          bucket: ${self:custom.env_var.s3_bucket}
+          event: s3:ObjectCreated:*
+          existing: true
 
 resources:
   Resources:
@@ -33,42 +67,16 @@ resources:
       Type: AWS::S3::Bucket
       Properties:
         BucketName: ${self:custom.env_var.s3_bucket}
-    apiRole:
-      Type: AWS::IAM::Role
+    filesDataTable:
+      Type: AWS::DynamoDB::Table
       Properties:
-        RoleName: apiRole
-        AssumeRolePolicyDocument:
-          Version: '2012-10-17'
-          Statement:
-            - Effect: Allow
-              Principal:
-                Service:
-                  - lambda.amazonaws.com
-              Action: sts:AssumeRole
-        Policies:
-          - PolicyName: lambdaPolicy
-            PolicyDocument:
-              Version: '2012-10-17'
-              Statement:
-                - Effect: Allow
-                  Action:
-                    - logs:CreateLogGroup
-                    - logs:CreateLogStream
-                    - logs:PutLogEvents
-                  Resource:
-                    - 'Fn::Join':
-                      - ':'
-                      -
-                        - 'arn:aws:logs'
-                        - Ref: 'AWS::Region'
-                        - Ref: 'AWS::AccountId'
-                        - 'log-group:/aws/lambda/*:*:*'
-                - Effect: "Allow"
-                  Action:
-                    - "s3:PutObject"
-                  Resource:
-                    Fn::Join:
-                      - ""
-                      - - "arn:aws:s3:::"
-                        - ${self:custom.env_var.s3_bucket}
-                        - "/*"
+        TableName: ${self:custom.env_var.ddb_table_name}
+        AttributeDefinitions:
+          - AttributeName: key
+            AttributeType: S
+        KeySchema:
+          - AttributeName: key
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
