--- a/serverless.yml
+++ b/serverless.yml
@@ -6,10 +6,10 @@ frameworkVersion: '2'
 
 custom:
   env_var:
-    s3_bucket: myservice-gabi235087594-mybucket
+    s3_bucket: BUCKET_NAME
     ddb_table_name: files_data_table
     region: us-east-1
-    arn: '242346692193'
+    arn: 'ARN'
 
 provider:
   name: aws
@@ -45,7 +45,7 @@ provider:
 
 functions:
   api:
-    handler: api/handler.handler
+    handler: api/apiHandler.handler
     events:
       - http:
           path: /
@@ -56,7 +56,7 @@ functions:
           method: ANY
           authorizer: authorizerFunc
   trigger:
-    handler: trigger/handler.handler
+    handler: trigger/triggerHandler.handler
     events:
       - s3:
           bucket: ${self:custom.env_var.s3_bucket}
